Fix chrome://gpu feature status when gpu access is blocked

When GPU access is blocked (i.e., hardware acceleration and SwiftShader
are both disabled), chrome://gpu reports incorrect values for Surface
Synchronization and Viz Service Display Compositor features.

BUG=829426
TEST=manual

Change-Id: I977a3902d71d53d77be2473ecd4b755b895f6a79
Reviewed-on: https://chromium-review.googlesource.com/1017227
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Mohsen Izadi <mohsen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551806}
Former-commit-id: a26cfed32a00ed464f669d713780a535c057ba27